fix: change parent container size to fit in viewport width, change cards alignment

--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -10,12 +10,14 @@
 }
 .skills-main-wrapper {
   margin: 4rem 0;
-  width: 100%; 
+  width: 100%;
 }
-.skills-cards-wrapper { /*TODO: see naming, confusion w/element below*/
+.skills-cards-wrapper {
+  /*TODO: see naming, confusion w/element below*/
   gap: 2rem;
 }
-.skills-card-wrapper { /*TODO: see naming, confusion w/element above*/
+.skills-card-wrapper {
+  /*TODO: see naming, confusion w/element above*/
   padding: 1rem;
   width: 7rem;
   height: 8rem;
@@ -27,10 +29,10 @@
 .tools-wrapper {
   align-items: flex-end;
   gap: 1rem;
-  transition: all ease-in-out .75s;
+  transition: all ease-in-out 0.75s;
   opacity: 0;
 }
-.technologies-wrapper{
+.technologies-wrapper {
   transform: translate(75rem);
 }
 .tools-wrapper {
@@ -74,7 +76,7 @@
 }
 
 .marquee-up-first {
-animation: marqueeLeftFirst 50s linear infinite;
+  animation: marqueeLeftFirst 50s linear infinite;
 }
 .marquee-up-second {
   animation: marqueeLeftSecond 50s linear infinite;
@@ -127,21 +129,42 @@ animation: marqueeLeftFirst 50s linear infinite;
     height: 105vh;
     padding: 2rem 1rem;
   }
+  .skills-main-wrapper {
+    margin: 2rem 0rem;
+  }
+  .skills-cards-wrapper {
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
   .skills-cards-wrapper {
     gap: 1rem;
   }
   .skills-card-wrapper {
     width: 5.25rem;
     height: 6rem;
-    padding: .5rem;
+    padding: 0.5rem;
   }
+  .tools-wrapper .skills-cards-wrapper {
+    justify-content: flex-end;
+  }
+  .technologies-wrapper .skills-cards-wrapper {
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .technologies-wrapper
+    .skills-cards-wrapper
+    .skills-card-wrapper:nth-child(1) {
+    margin-right: 60vw; /* Pushes items to get symetric layout with the tools-wrapper, when adding new items this must be modified*/ 
+  }
+
   .skills-card-title {
-    font-size: .75rem;
+    font-size: 0.75rem;
   }
   .skills-card-logo {
     height: 3rem;
   }
-  .technologies-wrapper{
+  .technologies-wrapper {
     transform: translate(10rem);
   }
   .tools-wrapper {
